BE/Nios/.metadata/.plugins/org.eclipse.cdt.ui/sopc_fianl_barreFranche.build.log
17:24:52 **** Incremental Build of configuration Nios II for project sopc_fianl_barreFranche ****
make all 
Info: Building C:/Users/selgu/Desktop/M2_sme/BE/BE/Nios/software/sopc_fianl_barreFranche_bsp/
C:/intelFPGA_lite/18.1/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C C:/Users/selgu/Desktop/M2_sme/BE/BE/Nios/software/sopc_fianl_barreFranche_bsp/
[BSP build complete]
Info: Compiling hello_world_small.c to obj/default/hello_world_small.o
nios2-elf-gcc -xc -MP -MMD -c -IC:/Users/selgu/Desktop/M2_sme/BE/BE/Nios/software/sopc_fianl_barreFranche_bsp//HAL/inc -IC:/Users/selgu/Desktop/M2_sme/BE/BE/Nios/software/sopc_fianl_barreFranche_bsp/ -IC:/Users/selgu/Desktop/M2_sme/BE/BE/Nios/software/sopc_fianl_barreFranche_bsp//drivers/inc  -pipe -D__hal__ -DALT_NO_C_PLUS_PLUS -DALT_NO_CLEAN_EXIT -D'exit(a)=_exit(a)' -DALT_NO_EXIT -DALT_USE_DIRECT_DRIVERS -DALT_NO_INSTRUCTION_EMULATION -DALT_USE_SMALL_DRIVERS -DSMALL_C_LIB -DALT_SINGLE_THREADED    -Os -g -Wall   -mno-hw-div -mno-hw-mul -mno-hw-mulx -mgpopt=global  -o obj/default/hello_world_small.o hello_world_small.c
hello_world_small.c: In function 'main':
hello_world_small.c:122:9: error: 'codeFonction' undeclared (first use in this function)
    a= (*codeFonction)&0xF;
         ^
hello_world_small.c:122:9: note: each undeclared identifier is reported only once for each function it appears in
hello_world_small.c:124:3: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
   printf("Freq = %d\n", animo_freq());
   ^
hello_world_small.c:124:3: warning: incompatible implicit declaration of built-in function 'printf'
hello_world_small.c:124:3: note: include '<stdio.h>' or provide a declaration of 'printf'
make: *** [obj/default/hello_world_small.o] Error 1

17:24:53 Build Finished (took 1s.19ms)

